# morse-chat

backend/: Cargo.toml
backend/src/: lib.rs  main.rs  request.rs  response.rs
backend/websockets/: Cargo.toml
backend/websockets/src/: frame.rs  lib.rs
frontend/: chat.html  index.html
frontend/scripts/: chat.js  index.js
frontend/styles/: style.css
