[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
base64 = "0.20.0"
rand = "0.8.5"
sha1 = "0.10.5"
tokio = { git = "https://github.com/tokio-rs/tokio", tag = "tokio-1.23.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.16"
websockets = { path = "./websockets/" }
